# eePearGE

./: README.md
Core/: run_cmake.bat
Core/eePearGE/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Main.cpp  WindowManager.cpp  WindowManager.h  eePearGE.sln  eePearGE.vcxproj  eePearGE.vcxproj.filters
Core/eePearGE/Configuration/: CoreConfig.xml
Core/eePearGE/Engine/: Bitmap.cpp  CMakeLists.txt  ConfigurationManager.cpp  Game.cpp  GameManager.cpp  Main.cpp  Sprite.cpp  WindowManager.cpp
Core/eePearGE/Engine/include/: Bitmap.h  ConfigurationManager.h  EventManager.h  Game.h  GameManager.h  Pear.h  Sprite.h  WindowManager.h
Core/eePearGE/GDK/: CMakeLists.txt
Games/SampleGame/: GameConfig.xml
